crates/parser/tests/cases/snapshots/cases__errors__module_nonsense.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(module_nonsense), module::parse_module, true, \"))\")"

---
error: Unmatched right parenthesis
  ┌─ module_nonsense:1:1
  │
1 │ ))
  │ ^


